@@ -27,8 +27,8 @@ public class WebSecurityConfig implements WebMvcConfigurer {
                 .csrf().disable()
                 .cors(corsCustomizer -> corsCustomizer.configurationSource(request -> {
                     CorsConfiguration config = new CorsConfiguration();
-                    config.setAllowCredentials(true);
-                    config.setAllowedOrigins(Collections.singletonList("http://localhost:3098"));
+                    config.setAllowCredentials(false);
+                    config.setAllowedOrigins(List.of("http://localhost:3098", "https://fc-on.com"));
                     config.setAllowedMethods(Collections.singletonList("*"));
                     config.setAllowedHeaders(Collections.singletonList("*"));
                     return config;
